<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/description_textview_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:text="@string/description_0" />

    <TextView
        android:id="@+id/description_textview_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_textview_0"
        android:text="@string/description_1"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/description_textview_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_textview_1"
        android:text="@string/description_2"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description_html_textview"
        android:layout_below="@id/description_textview_2"
        android:layout_marginTop="20dp"
        android:linksClickable="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/init"
        android:id="@+id/init"
        android:layout_above="@+id/launch_circle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_circle"
        android:id="@+id/launch_circle"
        android:layout_above="@+id/launch_message"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
         />
    <Button
        android:id="@+id/launch_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:text="@string/launch_message" />
</RelativeLayout>
